Cursito de desarrollo de software/20220917/46
Cursito de desarrollo de software de Bru; Clase: 2; Hoja: 46; Radix: 10


        ¡Ejemplos! En la forma de divertidas adivinanzas ✨

        >>> 2 * x = x
          File "<stdin>", line 1
            2 * x = x
            ^^^^^
        SyntaxError: cannot assign to expression here. Maybe you meant '=='
        instead of '='?

        “Error de sintaxis: no se puede asignar a la expresión de aquí.
        ¿Quizás quisiste decir '==' en vez de '='?”

        El operador asignación '=' opera con una variable a su izquierda y un
        valor a su derecha.





rects:
  - i: 5
    j: 8
    hsteps: 79
    vsteps: 6
    color: "002020"
    text_color: "FFFFFF"
